✨ Add fragments and navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TripHelper</string>
+    <string name="ic_trip">Trip</string>
+    <string name="ic_history">History</string>
+    <string name="ic_settings">Settings</string>
+    <string name="title_trip">Trip</string>
+    <string name="title_history">History</string>
+    <string name="title_settings">Settings</string>
 </resources>
