--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="title_trip">Trip</string>
     <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
+
+
+    <string name="passengers">Passengers %1$d</string>
 </resources>
